# src/main/java/com/sgi/account/domain/ports/in/BankAccountService.java
@@ -2,7 +2,9 @@ package com.sgi.account.domain.ports.in;
 
 import com.sgi.account.infrastructure.dto.AccountRequest;
 import com.sgi.account.infrastructure.dto.AccountResponse;
+import com.sgi.account.infrastructure.dto.BalanceRequest;
 import com.sgi.account.infrastructure.dto.BalanceResponse;
+import com.sgi.account.infrastructure.dto.AccountBalanceResponse;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
@@ -13,8 +15,9 @@ import reactor.core.publisher.Mono;
 public interface BankAccountService {
     Mono<AccountResponse> createAccount(Mono<AccountRequest> customer);
     Mono<Void> deleteAccount(String id);
-    Flux<AccountResponse> getAllAccounts();
+    Flux<AccountResponse> getAllAccounts(String clientId, String type, String accountId);
     Mono<AccountResponse> getAccountById(String id);
     Mono<AccountResponse> updateAccount(String id, Mono<AccountRequest> account);
     Mono<BalanceResponse> getClientBalances(String idAccount);
+    Mono<AccountBalanceResponse> updatedBalanceByAccountId(String action, Mono<BalanceRequest> balanceRequest);
 }
