# src/main/java/com/sgi/account/infrastructure/repository/BankAccountRepositoryJpa.java
@@ -1,7 +1,9 @@
 package com.sgi.account.infrastructure.repository;
 
 import com.sgi.account.domain.model.BankAccount;
+import org.springframework.data.mongodb.repository.Query;
 import org.springframework.data.mongodb.repository.ReactiveMongoRepository;
+import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 /**
@@ -11,4 +13,6 @@ import reactor.core.publisher.Mono;
 public interface BankAccountRepositoryJpa extends ReactiveMongoRepository<BankAccount, String> {
 
     Mono<Boolean> existsByClientIdAndType(String clientId, String type);
+
+    Flux<BankAccount> findAllByClientIdOrTypeOrId(String clientId, String type, String id);
 }
